# bomberman-c

./: .gitignore  CMakeLists.txt
archive/: client.h  server.h  sockets.c  sockets.h  window.c  window.h
src/: client.c  game.c  main.c  server.c
src/core/: conf.h  enums.h  global.c  global.h  structs.h  utils.c  utils.h
src/game/: game.c  game.h
src/levels/: level_01.txt
src/map/: map.c  map.h
src/objects/: bombs.c  bombs.h  powerup.c  powerup.h
src/player/: player.c  player.h
